
Enchancements:
• All new blocks/items from Quark, Backported Flora, and Future MC have received GoG compatible recipes
• Added Elven Gateway recipe for creating Quark cave crystals out of stained glass
• Enchanted soil can now be picked up with Silk Touch
• Refactored how one gets sponge, coral blocks, and coral plants
• Added alchemy catalyst recipe for Inspirations flowers

Mods Updated (mostly bugfixes):
• Antique Atlas
• AppleSkin
• Bad Wither No Cookie
• Base
• Better Invisibility
• BiomeTweaker
• BlockCraftery
• Bookshelf
• Carry On
• Charset Lib
• Charset Transport
• ChickenChunks
• CodeChickenLib
• Comforts
• Controlling
• Crafting Station
• Custom Main Menu
• Ding
• Essentials
• Farseek
• FastWorkbench
• FoamFix
• Forgiving Void
• Game Stages
• Inspirations
• Mystical Lib
• JEI Integration
• Just Enough Resources
• KleeSlabs
• Iron Chests
• Login Shield
• Mantle
• ModTweaker
• More Overlays
• Nature's Compass
• Pretty Beaches
• Quark
• Recipe Stages
• Redstone PCB
• Shadowfact's Forgelin
• Simple Trophies
• Smooth Font
• Sound Filters
• Toast Control
• Triumph
• VanillaFix
• WAWLA
• Waystones
• Worley's Caves
• Worse Barrels

Mods Removed:
• Simple Harvest (feature pulled into Quark)

------------------------------------------------------------------------------------------------------------------------------------------

§n1.3.3§r

Mods Updated:
• Botania
• Botania Tweaks
• Incorporeal

Bugfixes:
• Moved mud->dirt recipe from anvil smashing to furnace, because the former didn't work
• Changed Quark config to allow Totem of Holding to be claimed by player
• Guardians now drop XP when not killed by player

------------------------------------------------------------------------------------------------------------------------------------------

§n1.3.2§r

Mods Removed:
• RealBench

Mods Added:
• Crafting Station

Bugfixes:
• Fixed manufactory halo deleting items left in the crafting grid
