@@ -42,7 +42,7 @@
     S:maxStackSizeTooltipMode=disabled
 
     # Configure the state of the metadata tooltip [default: disabled]
-    S:metadataTooltipMode=enabled
+    S:metadataTooltipMode=disabled
 
     # config.jeiintegration.tooltips.nbtTooltipMode.comment [default: disabled]
     S:nbtTooltipMode=disabled
@@ -51,10 +51,10 @@
     S:oreDictEntriesTooltipMode=disabled
 
     # Configure the state of the registry name tooltip. [default: disabled]
-    S:registryNameTooltipMode=enabled
+    S:registryNameTooltipMode=disabled
 
     # Configure the state of the unlocalized name tooltip. [default: disabled]
-    S:unlocalizedNameTooltipMode=onShift
+    S:unlocalizedNameTooltipMode=disabled
 }
 
 
