@@ -7,6 +7,9 @@ general {
         mycelium_mushroom.json
         glowcelium_glowshroom.json
         glowcelium.json
+        spawner_creeper.json
+        spawner_skeleton.json
+        spawner_zombie.json
      >
 
     # Selects the files that load into the NBTStorage [default: ]
